# Masters-thesis

./: 3PH_power_slice.kicad_pcb  3PH_power_slice.kicad_sch  3PH_power_slice.sch  CMakeLists.txt  README.md  adc.c  adc.h  bridge.c  bridge.h  comms.c  comms.h  control.c  control.h  main.c  pid.c  pid.h  position.c  position.h  tusb_config.h  usb_cdc.c  usb_cdc.h  usb_descriptors.c
